# agentic-patterns

./: .env.example  .gitignore  README.md  RUN_TESTS.sh  TEST_REPORT.md  pyproject.toml  requirements.txt  test_results.json
1-foundational/: README.md
1-foundational/adk-examples/: 01_simple_agent.py  02_memory_augmented_agent.py  03_tool_using_agent.py  04_planning.py  05_reflection_generator_critic.py  06_loop_cyclic.py  07_react.py  08_chain_of_thought.py  09_evals.py
1-foundational/crewai-examples/: 01_simple_agent.py  02_memory_augmented_agent.py  03_tool_using_agent.py  04_planning.py  05_reflection_generator_critic.py  06_loop_cyclic.py  07_react.py  08_chain_of_thought.py
1-foundational/diagrams/: 01_simple_agent.mermaid  02_memory_augmented.mermaid  03_tool_using_agent.mermaid  04_planning.mermaid  05_reflection_generator_critic.mermaid  06_loop_cyclic.mermaid  07_react.mermaid  08_chain_of_thought.mermaid  09_evals.mermaid  README.md
2-orchestration/: README.md
2-orchestration/adk-examples/: 01_sequential_orchestration.py  02_parallel_orchestration.py  03_supervisor_pattern.py  04_hierarchical_pattern.py  05_competitive_pattern.py  06_network_swarm_pattern.py  07_handoff_orchestration.py  08_blackboard_pattern.py  09_magentic_orchestration.py  10_market_based_pattern.py
2-orchestration/crewai-examples/: 01_sequential_orchestration.py  02_parallel_orchestration.py  03_supervisor_pattern.py  04_hierarchical_pattern.py  05_competitive_pattern.py  06_network_swarm_pattern.py  07_handoff_orchestration.py  08_blackboard_pattern.py  09_magentic_orchestration.py  10_market_based_pattern.py
2-orchestration/diagrams/: 01_sequential_orchestration.mermaid  02_parallel_orchestration.mermaid  03_supervisor_pattern.mermaid  04_hierarchical_pattern.mermaid  05_competitive_pattern.mermaid  06_network_swarm_pattern.mermaid  07_handoff_orchestration.mermaid  08_blackboard_pattern.mermaid  09_magentic_orchestration.mermaid  10_market_based_pattern.mermaid  README.md
2-orchestration/shared-tools/: INTEGRATION_GUIDE.md  QUICK_START.md  README.md
3-intelligence/: README.md  README.md.bak
3-intelligence/adk-examples/: 01_rag.py  02_agentic_rag.py  03_mcp_tools.py  04_a2a_protocol.py  05_guardrails_safety.py  06_exception_handling.py  07_hitl.py  08_resource_optimization.py  09_prioritization.py  10_goal_monitoring.py  11_checkpoint_rollback.py
3-intelligence/benchmarks/: QUICKSTART.md  README.md  SAMPLE_OUTPUT.md
3-intelligence/crewai-examples/: 01_rag.py  02_agentic_rag.py  03_mcp_tools.py  04_a2a_protocol.py  05_guardrails_safety.py  06_exception_handling.py  07_hitl.py  08_resource_optimization.py  09_prioritization.py  10_goal_monitoring.py  11_checkpoint_rollback.py
3-intelligence/diagrams/: 01_rag.mermaid  02_agentic_rag.mermaid  03_mcp_tools.mermaid  04_a2a_protocol.mermaid  05_guardrails_safety.mermaid  06_exception_handling.mermaid  07_hitl.mermaid  08_resource_optimization.mermaid  09_prioritization.mermaid  10_goal_monitoring.mermaid  11_checkpoint_rollback.mermaid  README.md
4-production/: README.md
4-production/adk-examples/: 01_learning_adaptation.py  02_exploration_discovery.py  03_evolutionary_curriculum.py  04_modular_agent.py  05_maker_checker.py  06_abm.py
4-production/crewai-examples/: 01_learning_adaptation.py  (+5 more)
docs/: framework-selection-guide.md  pattern-comparison-matrix.md
shared-utilities/: error_handling.py  retry_utils.py
tests/: README.md  conftest.py
(+55 files in other folders)
